--- a/vite-project/src/html/end.html
+++ b/vite-project/src/html/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>End</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,10 +15,10 @@
                 <input type="text" name="name" id="username" placeholder="Enter Your Name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/quiz/game.html" class="btn">Play Again</a>
-            <a href="/quiz/" class="btn">Go Home</a>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="/quiz/end.js"></script>
+    <script src="../js/end.js"></script>
 </body>
 </html>
