--- a/vite-project/src/html/index.html
+++ b/vite-project/src/html/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you ready?</h1>
-            <a href="/quiz/game.html" class="btn">Play</a>
-            <a href="/quiz/highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
         </div>
     </div>
 </body>
