--- a/vite-project/game.html
+++ b/vite-project/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/game.css">
 </head>
 <body>
     <div class="container">
@@ -28,25 +28,25 @@
                     </h1>
                 </div>
             </div>
-            <h1 id="question">What is the answer to this question</h1>
+            <h1 id="question">Loading...</h1>
             <div class="choice-container">
-                <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Choice 1</p>
+                <p class="choice-prefix">A.</p>
+                <p class="choice-text" data-number="1">Loading...</p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2">Choice 2</p>
+                <p class="choice-prefix">B.</p>
+                <p class="choice-text" data-number="2">Loading...</p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3">Choice 3</p>
+                <p class="choice-prefix">C.</p>
+                <p class="choice-text" data-number="3">Loading...</p>
             </div>
             <div class="choice-container">
-                <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">Choice 4</p>
+                <p class="choice-prefix">D.</p>
+                <p class="choice-text" data-number="4">Loading...</p>
             </div>
         </div>
     </div>
-    <script src="../js/game.js"></script>
+    <script src="game.js" type="module"></script>
 </body>
 </html>
