--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you ready?</h1>
+            <h2 id="end-text">Enter a Topic to Test</h2>
+            <input type="text" name="topic" id="topic" placeholder="Enter Topic">
+            <br>
             <a href="game.html" class="btn">Play</a>
-            <a href="highscores.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
         </div>
     </div>
+    
 </body>
 </html>
