AI WORKS WITH TEXT INPUT

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,10 +12,9 @@
             <h1>Are you ready?</h1>
             <h2 id="end-text">Enter a Topic to Test</h2>
             <input type="text" name="topic" id="topic" placeholder="Enter Topic">
-            <br>
-            <a href="game.html" class="btn">Play</a>
+            <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
         </div>
     </div>
-    
+    <script src="src/js/index.js"></script>
 </body>
 </html>
