number of questions to game.js

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,6 +12,7 @@
             <h1>Are you ready?</h1>
             <h2 id="end-text">Enter a Topic to Test</h2>
             <input type="text" name="topic" id="topic" placeholder="Enter Topic">
+            <input type="text" name="qnum" id="qnum" placeholder="Enter Desired Number of Questions">
             <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
         </div>
     </div>
