--- a/vite-project/game.html
+++ b/vite-project/game.html
@@ -45,6 +45,7 @@
                 <p class="choice-prefix">D.</p>
                 <p class="choice-text" data-number="4">Loading...</p>
             </div>
+            <h2 id="feedback">Loading...</h2>
         </div>
     </div>
     <script src="game.js" type="module"></script>
