--- a/vite-project/firebase/index.html
+++ b/vite-project/firebase/index.html
@@ -3,40 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-
 </head>
 <body>
-    <div class="form">
-        <div class="email">
-            <label for="email">Email</label>
-            <input type="email"
-            name="email"
-            id="email"
-            placeholder="Email">
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h1>Welcome!</h1>
+            <h2 id="end-text">Enter Login Credentials</h2>
+            <input type="text" name="email" id="email" placeholder="Enter Email">
+            <input type="password" name="pwd" id="pwd" placeholder="Enter Password">
+            <button class="btn" id="signUpButton" type="submit" onclick="signUp()" disabled>Sign Up</button>
+            <p>Already Have an Account? <span><a href="signinpage.html">Sign In</a></span> </p>
         </div>
-        <div class="pass">
-            <label for="password">Password</label>
-            <input type="password"
-            name="password"
-            id="password"
-            placeholder="Password">
-        </div>
-        <button id="submit-btn" onclick="signUp()">Sign Up</button>
-        <p>Already have an account?</p>
-        <span><a href="signinpage.html">Sign In</a></span>
     </div>
-
-    
-
-
-
-
-
-    <script src="main.js"></script>
+    <script src="/firebase/main.js"></script>
 </body>
 </html>
