--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,8 +6,14 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="icon" type="image/x-icon" href="/Favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Open+Sans" rel="stylesheet">
 </head>
 <body>
+    <div class="navigation">
+        <a class="logo" href="index.html">QUIZ<span>ME</span></a>
+        <a class="contabt" href="https://www.google.com">About</a>
+        <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+      </div>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you ready?</h1>
