--- a/vite-project/game.html
+++ b/vite-project/game.html
@@ -6,8 +6,14 @@
     <title>Quiz Page</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/game.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Open+Sans" rel="stylesheet">
 </head>
 <body>
+    <div class="navigation">
+        <a class="logo" href="index.html">QUIZ<span>ME</span></a>
+        <a class="contabt" href="https://www.google.com">About</a>
+        <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+    </div>
     <div class="container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
