fixes with styling and game.js

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,11 +6,10 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="icon" type="image/x-icon" href="/Favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Open+Sans" rel="stylesheet">
 </head>
 <body>
     <div class="navigation">
-        <a class="logo" href="index.html">QUIZ<span>ME</span></a>
+        <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <a class="contabt" href="https://www.google.com">About</a>
         <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
     </div>
