--- a/vite-project/src/html/end.html
+++ b/vite-project/src/html/end.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <div class="navigation">
+        <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
+        <a class="contabt" href="https://www.google.com">About</a>
+        <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+    </div>
     <div class="container">
         <div id="end" class="flex-center flex-column">
             <h1 id="finalScore">0</h1>
