--- a/vite-project/game.html
+++ b/vite-project/game.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navigation">
-        <a class="logo" href="index.html">QUIZ<span>ME</span></a>
+        <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <a class="contabt" href="https://www.google.com">About</a>
         <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
     </div>
@@ -56,7 +56,6 @@
                 <p class="choice-text" data-number="4">Loading...</p>
                 <p id="feedback"></p>
             </div>
-            <h2 id="feedback">Loading...</h2>
         </div>
     </div>
     <script src="game.js" type="module"></script>
