--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -11,8 +11,11 @@
 <body>
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
-        <a class="contabt" href="https://www.google.com">About</a>
-        <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+        <div class="rightside">
+            <a class="contabt" href="https://www.google.com">About</a>
+            <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+            <img src="src/images/night-mode.png" width="20" height="19" id="icon">
+        </div>
     </div>
     <div class="container">
         <div id="home" class="flex-column flex-center">
