--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -13,7 +13,7 @@
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
             <a class="contabt" href="https://www.google.com">About</a>
-            <a class="contabt" href="mailto:aadibhat09@gmail.com">Contact</a>
+            <a class="contabt" href="https://www.google.com">Contact</a>
             <img src="src/images/night-mode.png" width="20" height="19" id="icon">
         </div>
     </div>
