some toggle issues

--- a/vite-project/game.html
+++ b/vite-project/game.html
@@ -14,7 +14,7 @@
         <div class="rightside">
             <a class="contabt" href="https://www.google.com">About</a>
             <a class="contabt" href="https://www.google.com">Contact</a>
-            <img src="src/images/night-mode.png" width="20" height="19" id="icon">
+            <img src="src/images/light-mode.png" width="20" height="19" id="icon">
         </div>
     </div>
     <div class="container">
