--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -13,7 +13,8 @@
         <div class="rightside">
             <a class="contabt" href="https://www.google.com">About</a>
             <a class="contabt" href="https://www.google.com">Contact</a>
-            <img src="src/images/light-mode.png" width="20" height="19" id="icon">
+            <a class="emoji" id="icon">🌞</a>
+            
         </div>
     </div>
     <div class="container">
