small style changes

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are you ready?</h1>
-            <h2 id="end-text">Enter a topic to be quizzed on!</h2>
+            <h2 id="end-text">What would you like to be quizzed on?</h2>
             <input type="text" name="topic" id="topic" placeholder="Enter your topic">
             <input type="text" name="qnum" id="qnum" placeholder="Enter a number of questions">
             <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
