renamed vite-project folder to quiz_me, hanged emojis, added github link

--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -11,9 +11,9 @@
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://www.google.com">About</a>
+            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
             <a class="contabt" href="https://www.google.com">Contact</a>
-            <a class="emoji" id="icon">🌞</a>
+            <a class="emoji" id="icon">&#127772;</a>
             
         </div>
     </div>
