add leaderboard, light to dark theme change final touches, do across all files

--- a/quiz_me/game.html
+++ b/quiz_me/game.html
@@ -12,9 +12,9 @@
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://www.google.com">About</a>
+            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
             <a class="contabt" href="https://www.google.com">Contact</a>
-            <img src="src/images/light-mode.png" width="20" height="19" id="icon">
+            <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
     <div class="container">
