--- a/quiz_me/src/html/end.html
+++ b/quiz_me/src/html/end.html
@@ -10,9 +10,9 @@
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://www.google.com">About</a>
+            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
             <a class="contabt" href="https://www.google.com">Contact</a>
-            <img src="src/images/light-mode.png" width="20" height="19" id="icon">
+            <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
     <div class="container">
@@ -23,7 +23,7 @@
                 <input type="text" name="name" id="username" placeholder="Enter Your Name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="game.html" class="btn">Play Again</a>
+            <a href="highscores.html" class="btn">High Scores</a>
             <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
