--- a/quiz_me/src/html/highscores.html
+++ b/quiz_me/src/html/highscores.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/highscores.css">
 </head>
 <body>
+    <div class="navigation">
+        <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
+        <div class="rightside">
+            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
+            <a class="contabt" href="https://www.google.com">Contact</a>
+            <a class="emoji" id="icon">&#9728;</a>
+        </div>
+    </div>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/quiz/" class="btn">Go Home</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
     <script src="../js/highscores.js"></script>
