button styling, save score alert

--- a/quiz_me/src/html/end.html
+++ b/quiz_me/src/html/end.html
@@ -20,7 +20,7 @@
             <h1 id="finalScore">0</h1>
             <form class="end-form-container">
                 <h2 id="end-text">Enter your name below to save your score</h2>
-                <input type="text" name="name" id="username" placeholder="Enter Your Name">
+                <input type="text" name="name" id="username" placeholder="Name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
             <a href="highscores.html" class="btn">High Scores</a>
