clear leaderboard function

--- a/quiz_me/src/html/end.html
+++ b/quiz_me/src/html/end.html
@@ -23,8 +23,8 @@
                 <input type="text" name="name" id="username" placeholder="Name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="highscores.html" class="btn">High Scores</a>
-            <a href="index.html" class="btn">Go Home</a>
+            <a href="highscores.html" class="btn">High scores</a>
+            <a href="index.html" class="btn">Go home</a>
         </div>
     </div>
     <script src="../js/end.js"></script>
