--- a/quiz_me/src/html/highscores.html
+++ b/quiz_me/src/html/highscores.html
@@ -19,7 +19,8 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="index.html" class="btn">Go Home</a>
+            <button class="btn" id="clearLeaderboardBtn" type="submit" onclick="clearLeaderboard()">Clear leaderboard</button>
+            <a href="index.html" class="btn">Go home</a>
         </div>
     </div>
     <script src="../js/highscores.js"></script>
