--- a/quiz_me/src/html/highscores.html
+++ b/quiz_me/src/html/highscores.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
@@ -19,10 +21,12 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <button class="btn" id="clearLeaderboardBtn" type="submit" onclick="clearLeaderboard()">Clear leaderboard</button>
+            <button class="btn" id="clearLeaderboardBtn" type="submit" onclick="clearLeaderboard()">Clear
+                leaderboard</button>
             <a href="index.html" class="btn">Go home</a>
         </div>
     </div>
     <script src="../js/highscores.js"></script>
 </body>
+
 </html>
