favicon, contact and github links, removed public folder

--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>QuizMe | Home</title>
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/Favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Favicon.png">
 </head>
 
 <body>
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
-            <a class="contabt" href="https://www.google.com">Contact</a>
+            <a class="contabt" href="https://github.com/Hypernova101/QuizMe" target="_blank">GitHub</a>
+            <a class="contabt" href="mailto:aadibhat09@gmail.com,mihirnbapat@gmail.com">Contact</a>
             <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
