--- a/quiz_me/game.html
+++ b/quiz_me/game.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Page</title>
+    <title>QuizMe | Game</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/game.css">
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Open+Sans" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Favicon.png">
 </head>
 
 <body>
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://github.com/Hypernova101/stem">GitHub</a>
-            <a class="contabt" href="https://www.google.com">Contact</a>
+            <a class="contabt" href="https://github.com/Hypernova101/QuizMe" target="_blank">GitHub</a>
+            <a class="contabt" href="mailto:aadibhat09@gmail.com,mihirnbapat@gmail.com">Contact</a>
             <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
