re ordering repo, change asset file path, add high scores button to home page

--- a/quiz_me/end.html
+++ b/quiz_me/end.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe | End</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/x-icon" href="../../Favicon.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/Favicon.png">
 </head>
 
 <body>
@@ -27,11 +27,11 @@
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)"
                     disabled>Save</button>
             </form>
-            <a href="highscores.html" class="btn">High scores</a>
-            <a href="index.html" class="btn">Go home</a>
+            <a href="highscores.html" class="btn">High Scores</a>
+            <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="../js/end.js"></script>
+    <script src="assets/js/end.js"></script>
 </body>
 
 </html>
