--- a/quiz_me/highscores.html
+++ b/quiz_me/highscores.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe | High Scores</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/x-icon" href="../../Favicon.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/Favicon.png">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
             <button class="btn" id="clearLeaderboardBtn" type="submit" onclick="clearLeaderboard()">Clear
-                leaderboard</button>
-            <a href="index.html" class="btn">Go home</a>
+                Leaderboard</button>
+            <button class="btn" onclick="goHome()">Go Home</button>
         </div>
     </div>
-    <script src="../js/highscores.js"></script>
+    <script src="assets/js/highscores.js"></script>
 </body>
 
 </html>
