--- a/quiz_me/game.html
+++ b/quiz_me/game.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe | Game</title>
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/game.css">
-    <link rel="icon" type="image/x-icon" href="Favicon.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/game.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/Favicon.png">
 </head>
 
 <body>
