--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -18,9 +18,15 @@
             <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
+
+    <div class="tagline">
+        <h1>Elevate your learning. Unleash your potential.</h1>
+    </div>
+
+
+
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>Are you ready?</h1>
             <h2 id="end-text">What would you like to be quizzed on?</h2>
             <input type="text" name="topic" id="topic" placeholder="Enter your topic">
             <input type="text" name="qnum" id="qnum" placeholder="Enter a number of questions">
