light/dark mode toggle has its own file. added tagline in index.html, doesn't look good in light mode.

--- a/quiz_me/end.html
+++ b/quiz_me/end.html
@@ -31,6 +31,7 @@
             <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
+    <script src="assets/js/toggle.js"></script>
     <script src="assets/js/end.js"></script>
 </body>
 
