--- a/quiz_me/game.html
+++ b/quiz_me/game.html
@@ -64,7 +64,8 @@
             </div>
         </div>
     </div>
-    <script src="/assets/js/game.js" type="module"></script>
+    <script src="assets/js/toggle.js"></script>
+    <script src="assets/js/game.js" type="module"></script>
 </body>
 
 </html>
