--- a/quiz_me/highscores.html
+++ b/quiz_me/highscores.html
@@ -27,6 +27,7 @@
             <button class="btn" onclick="goHome()">Go Home</button>
         </div>
     </div>
+    <script src="assets/js/toggle.js"></script>
     <script src="assets/js/highscores.js"></script>
 </body>
 
