--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="tagline">
-        <h1>Elevate your learning. Unleash your potential.</h1>
+        <h1>Boost your <span class="emphasis">study sessions</span> effortlessly!</h1>
     </div>
 
 
@@ -34,6 +34,7 @@
             <button class="btn" onclick="goToLeaderboard()">High Scores</button>
         </div>
     </div>
+    <script src="assets/js/toggle.js"></script>
     <script src="assets/js/index.js"></script>
 </body>
 
