fixed margin errors, formatting

--- a/quiz_me/game.html
+++ b/quiz_me/game.html
@@ -19,48 +19,49 @@
             <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
-
-    <div class="container">
-        <div id="game" class="justify-center flex-column">
-            <div id="hud">
-                <div class="hud-item">
-                    <p id="progressText" class="hud-prefix">
-                        Question
-                    </p>
-                    <div id="progressBar">
-                        <div id="progressBarFull"></div>
+    <div class="game">
+        <div class="container">
+            <div id="game" class="justify-center flex-column">
+                <div id="hud">
+                    <div class="hud-item">
+                        <p id="progressText" class="hud-prefix">
+                            Question
+                        </p>
+                        <div id="progressBar">
+                            <div id="progressBarFull"></div>
+                        </div>
+                    </div>
+                    <div class="hud-item">
+                        <p class="hud-prefix">
+                            Score
+                        </p>
+                        <h1 class="hud-main-text" id="score">
+                            0
+                        </h1>
                     </div>
                 </div>
-                <div class="hud-item">
-                    <p class="hud-prefix">
-                        Score
-                    </p>
-                    <h1 class="hud-main-text" id="score">
-                        0
-                    </h1>
+
+                <h1 id="question">Loading...</h1>
+                <div class="choice-container">
+                    <p class="choice-prefix">A.</p>
+                    <p class="choice-text" data-number="1">Loading...</p>
+
                 </div>
-            </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">B.</p>
+                    <p class="choice-text" data-number="2">Loading...</p>
 
-            <h1 id="question">Loading...</h1>
-            <div class="choice-container">
-                <p class="choice-prefix">A.</p>
-                <p class="choice-text" data-number="1">Loading...</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">C.</p>
+                    <p class="choice-text" data-number="3">Loading...</p>
 
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">B.</p>
-                <p class="choice-text" data-number="2">Loading...</p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">D.</p>
+                    <p class="choice-text" data-number="4">Loading...</p>
 
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">C.</p>
-                <p class="choice-text" data-number="3">Loading...</p>
-
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">D.</p>
-                <p class="choice-text" data-number="4">Loading...</p>
-
+                </div>
             </div>
         </div>
     </div>
