--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -18,20 +18,18 @@
             <a class="emoji" id="icon">&#9728;</a>
         </div>
     </div>
-
     <div class="tagline">
-        <h1>Boost your <span class="emphasis">study sessions</span> effortlessly!</h1>
+        <h1>Enhance your <span class="emphasis">study sessions</span> with ease!</h1>
     </div>
-
-
-
-    <div class="container">
-        <div id="home" class="flex-column flex-center">
-            <h2 id="end-text">What would you like to be quizzed on?</h2>
-            <input type="text" name="topic" id="topic" placeholder="Enter your topic">
-            <input type="text" name="qnum" id="qnum" placeholder="Enter a number of questions">
-            <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
-            <button class="btn" onclick="goToLeaderboard()">High Scores</button>
+    <div class="instantiator">
+        <div class="container">
+            <div id="home" class="flex-column flex-center">
+                <h2 id="end-text">What would you like to be quizzed on?</h2>
+                <input type="text" name="topic" id="topic" placeholder="Enter your topic">
+                <input type="text" name="qnum" id="qnum" placeholder="Enter a number of questions">
+                <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
+                <button class="btn" onclick="goToLeaderboard()">High Scores</button>
+            </div>
         </div>
     </div>
     <script src="assets/js/toggle.js"></script>
