proper github repo link

--- a/quiz_me/end.html
+++ b/quiz_me/end.html
@@ -13,7 +13,7 @@
     <div class="navigation">
         <a class="logo" href="index.html"><span class="quiz">QUIZ</span><span class="me">ME</span></a>
         <div class="rightside">
-            <a class="contabt" href="https://github.com/Hypernova101/QuizMe" target="_blank">GitHub</a>
+            <a class="contabt" href="https://github.com/AM-Hack/QuizMe" target="_blank">GitHub</a>
             <a class="contabt" href="mailto:aadibhat09@gmail.com,mihirnbapat@gmail.com">Contact</a>
             <a class="emoji" id="icon">&#9728;</a>
         </div>
