organize color variables, change color sceheme little bit, fix tagline, fade in textbox IN PROGRESS, add bg image

--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="tagline">
-        <h1>Enhance your <span class="emphasis">study sessions</span> with ease!</h1>
+        <h1><span class="emphasis">Elevate</span> your learning. <span class="emphasis">Unleash</span> your potential.</h1>
     </div>
     <div class="instantiator">
         <div class="container">
