--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -32,6 +32,9 @@
             </div>
         </div>
     </div>
+    <div id="design">
+        <img src="assets/images/Design.png" class="ok">
+    </div>
     <script src="assets/js/toggle.js"></script>
     <script src="assets/js/index.js"></script>
 </body>
