image changes, tagline final

--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="tagline">
-        <h1><span class="emphasis">Elevate</span> your learning. <span class="emphasis">Unleash</span> your potential.</h1>
+        <h1><span class="emphasis">Enhance</span> your study sessions. <span class="emphasis">Elevate</span> your learning.</h1>
     </div>
     <div class="instantiator">
         <div class="container">
@@ -31,9 +31,6 @@
                 <button class="btn" onclick="goToLeaderboard()">High Scores</button>
             </div>
         </div>
-    </div>
-    <div id="design">
-        <img src="assets/images/Design.png" class="ok">
     </div>
     <script src="assets/js/toggle.js"></script>
     <script src="assets/js/index.js"></script>
