play to generate quiz

--- a/quiz_me/index.html
+++ b/quiz_me/index.html
@@ -27,7 +27,7 @@
                 <h2 id="end-text">What would you like to be quizzed on?</h2>
                 <input type="text" name="topic" id="topic" placeholder="Enter your topic">
                 <input type="text" name="qnum" id="qnum" placeholder="Enter a number of questions">
-                <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Play</button>
+                <button class="btn" id="playButton" type="submit" onclick="SaveAndChange()" disabled>Generate Quiz</button>
                 <button class="btn" onclick="goToLeaderboard()">High Scores</button>
             </div>
         </div>
